# KAU-Notice-Hub-BackEnd

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  chat_log.py  chat_service.py  classification.py  config.py  crawler_scheduler.py  db.py  dependencies.py  ingest.py  main.py  normalize.py  rate_limit.py  repository.py  schemas.py  search.py  service.py  service_pipeline.py  sqlite_repository.py
app/api/: chat.py  notices.py
app/crawler/: config.py  main.py
app/crawler/clients/: base_client.py  kau_admission_client.py  kau_amtc_client.py  kau_asbt_client.py  kau_career_client.py  kau_college_client.py  kau_community_php_client.py  kau_ctl_client.py  kau_eslscat_client.py  kau_ftc_client.py  kau_library_client.py  kau_lms_client.py  kau_official_client.py  kau_research_client.py
app/crawler/models/: post.py
app/crawler/parsers/: base_parser.py  kau_admission_parser.py  kau_amtc_parser.py  kau_asbt_parser.py  kau_card_notice_parser.py  kau_career_parser.py  kau_college_parser.py  kau_ctl_parser.py  kau_eslscat_parser.py  kau_ftc_parser.py  kau_library_parser.py  kau_lms_parser.py  kau_official_parser.py  kau_research_parser.py
app/crawler/policies/: notice_policy.py
app/crawler/services/: board_crawler.py  board_registry.py  content_asset_downloader.py  content_enrichment_service.py  dedup_service.py  post_store.py  url_normalizer.py
app/crawler/services/content_extractors/: __init__.py  hwp_extractor.py  openai_provider.py
app/crawler/utils/: logger.py  markdown_converter.py
docs/: API_SPEC.md  CLASSIFICATION.md  CRAWLING_UPDATE.md  DEPLOYMENT.md  ERD.md  GPT_API_PROMPTS.md  IMPLEMENTATION_PLAN.md  PROJECT_STRUCTURE.md  RAG_EVALUATION.md  RAG_PLAN.md  README.md
docs/archive/initial-build/: BACKEND_STRUCTURE_PLAN.md  IMPLEMENTATION_PLAN.md  README.md
docs/crawler/: 01_project_overview.md  02_quickstart.md  03_crawl_targets.md  04_architecture.md  05_parsing_and_selectors.md  06_operations_and_failure.md  07_extension_guide.md  08_crawling_rules.md  09_content_enrichment_plan.md  09_content_enrichment_rules.md  10_troubleshooting_and_improvements.md  README.md
load-tests/k6/: api-load-test.js
scripts/: audit_markdown_quality.py  qa_chat_smoke.py  refresh_markdown_content.py  run_incremental_crawl_publish.sh
tests/: conftest.py  test_api.py  test_board_crawler.py  test_chat_log.py  test_chat_rag.py  test_chat_ragas.py  test_classification.py  test_content_enrichment.py  test_crawl_script.py  test_crawler_scheduler.py  test_dedup_service.py  test_dependencies_bootstrap.py  test_markdown_converter.py  test_markdown_quality_audit.py  test_normalize.py  test_notice_policy.py  test_rate_limit.py  test_refresh_markdown.py  test_repository.py  test_retrieval_quality.py  test_search.py  test_service.py  test_sqlite_repository.py
tests/eval/: ragas_cases.yml  ragas_runner.py  retrieval_cases.yml  runner.py
