[project]
name = "kau-notice-hub-backend"
version = "0.1.0"
description = "FastAPI backend for KAU Notice Hub"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "beautifulsoup4>=4.12.0",
  "markdownify>=0.13.1",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "requests>=2.32.0",
  "unhwp>=0.2.4",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "docs*", "scripts*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# 기본 실행은 eval 마크 제외. CI는 운영 데이터(data/*.db, data/*.json)가 없어
# eval 테스트가 NoticeRepositoryError로 실패한다. 운영에서는 명시적으로
# `pytest -m eval`로 호출한다.
addopts = "-m 'not eval'"
markers = [
  "eval: 운영 데이터 기반 retrieval 품질 측정 (pytest -m eval 로만 실행)"
]
